--- a/functions/package.json
+++ b/functions/package.json
@@ -3,11 +3,17 @@
   "description": "Firebase Functions",
   "version": "0.0.1",
   "dependencies": {
+    "date-fns": "^2.16.1",
+    "date-fns-tz": "^1.0.12",
     "firebase-admin": "^9.4.2",
-    "firebase-functions": "^3.13.0"
+    "firebase-functions": "^3.13.0",
+    "node-fetch": "^2.6.1",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
     "@fiahfy/eslint-config": "^0.0.11",
+    "@types/node-fetch": "^2.5.7",
+    "@types/twitter": "^1.7.0",
     "eslint": "^7.17.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
@@ -28,5 +34,8 @@
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell"
-  }
+  },
+  "workspaces": [
+    ".."
+  ]
 }
