--- a/functions/package.json
+++ b/functions/package.json
@@ -12,10 +12,13 @@
   },
   "devDependencies": {
     "@fiahfy/eslint-config": "^0.0.11",
+    "@types/jest": "^26.0.20",
     "@types/node-fetch": "^2.5.7",
     "@types/twitter": "^1.7.0",
     "eslint": "^7.17.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   },
   "engines": {
