--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "@types/twitter": "^1.7.0",
     "eslint": "^7.17.0",
     "jest": "^26.6.3",
+    "jest-date-mock": "^1.0.8",
     "prettier": "^2.2.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
