--- a/functions/package.json
+++ b/functions/package.json
@@ -7,14 +7,11 @@
     "date-fns-tz": "^1.0.12",
     "firebase-admin": "^9.4.2",
     "firebase-functions": "^3.13.0",
-    "node-fetch": "^2.6.1",
-    "twitter": "^1.7.1"
+    "twitter-api-client": "^1.2.4"
   },
   "devDependencies": {
     "@fiahfy/eslint-config": "^0.0.11",
     "@types/jest": "^26.0.20",
-    "@types/node-fetch": "^2.5.7",
-    "@types/twitter": "^1.7.0",
     "eslint": "^7.17.0",
     "jest": "^26.6.3",
     "jest-date-mock": "^1.0.8",
