--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.2",
+    "date-fns": "^2.16.1",
     "firebase": "^8.2.2",
     "next": "^10.0.5",
     "react": "^17.0.1",
@@ -18,6 +19,8 @@
   },
   "devDependencies": {
     "@fiahfy/eslint-config-next": "^0.0.11",
+    "@types/node": "^14.14.21",
+    "@types/react": "^17.0.0",
     "eslint": "^7.17.0",
     "firebase-tools": "^9.1.2",
     "husky": "^4.3.7",
