--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "devDependencies": {
     "@fiahfy/eslint-config-next": "^0.0.11",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.21",
     "@types/react": "^17.0.0",
     "eslint": "^7.17.0",
     "firebase-tools": "^9.1.2",
     "husky": "^4.3.7",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   },
   "keywords": [
