--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.2",
+    "color": "^3.1.3",
     "date-fns": "^2.16.1",
     "firebase": "^8.2.2",
     "next": "^10.0.5",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@fiahfy/eslint-config-next": "^0.0.11",
+    "@types/color": "^3.0.1",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.21",
     "@types/react": "^17.0.0",
