--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,3 +1,10 @@
+# Compiled JavaScript files
+**/*.js
+**/*.js.map
+
+# Except the ESLint config file
+!.eslintrc.js
+
 # TypeScript v1 declaration files
 typings/
 
