--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "scripts": {
     "build": "next build",
     "deploy": "firebase deploy --only hosting",
-    "dev": "next",
+    "dev": "next dev",
     "export": "next export",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint -f codeframe --ext .js,.ts,.tsx --ignore-path .gitignore .",
