--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "color": "^3.1.3",
     "date-fns": "^2.16.1",
     "firebase": "^8.2.2",
+    "firebase-admin": "^9.4.2",
     "next": "^10.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
@@ -24,11 +25,13 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.21",
     "@types/react": "^17.0.0",
+    "babel-plugin-superjson-next": "^0.1.11",
     "eslint": "^7.17.0",
     "firebase-tools": "^9.1.2",
     "husky": "^4.3.7",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "superjson": "^1.5.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   },
