--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@fiahfy/eslint-config": "^0.0.11",
     "@types/jest": "^26.0.20",
+    "dotenv": "^8.2.0",
     "eslint": "^7.17.0",
     "jest": "^26.6.3",
     "jest-date-mock": "^1.0.8",
