--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "url": "http://fiahfy.blogspot.com/"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/styles": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/styles": "^4.11.3",
     "color": "^3.1.3",
     "date-fns": "^2.16.1",
-    "firebase": "^8.2.2",
+    "firebase": "^8.2.4",
     "firebase-admin": "^9.4.2",
     "next": "^10.0.5",
     "react": "^17.0.1",
@@ -23,15 +24,15 @@
     "@fiahfy/eslint-config-next": "^0.0.11",
     "@types/color": "^3.0.1",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.21",
+    "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
-    "babel-plugin-superjson-next": "^0.1.11",
-    "eslint": "^7.17.0",
-    "firebase-tools": "^9.1.2",
-    "husky": "^4.3.7",
+    "babel-plugin-superjson-next": "^0.2.0",
+    "eslint": "^7.18.0",
+    "firebase-tools": "^9.2.2",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "superjson": "^1.5.0",
+    "superjson": "^1.5.2",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   },
