--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "export": "next export",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint -f codeframe --ext .js,.ts,.tsx --ignore-path .gitignore .",
-    "lint:prettier": "prettier -c --ignore-path .gitignore **/*.{js,ts,tsx}",
+    "lint:prettier": "prettier -c --ignore-path .gitignore .",
     "release": "npm run build && npm run export && npm run deploy",
     "start": "next start",
     "test": "npm run lint"
