--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@material-ui/styles": "^4.11.3",
     "color": "^3.1.3",
     "date-fns": "^2.16.1",
-    "firebase": "^8.2.4",
+    "firebase": "^8.2.5",
     "firebase-admin": "^9.4.2",
-    "next": "^10.0.5",
+    "next": "^10.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -26,14 +26,15 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
-    "babel-plugin-superjson-next": "^0.2.0",
+    "@types/resize-observer-browser": "^0.1.5",
+    "babel-plugin-superjson-next": "^0.2.1",
     "eslint": "^7.18.0",
     "firebase-tools": "^9.2.2",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "superjson": "^1.5.2",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
   },
   "keywords": [
