--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "http://fiahfy.blogspot.com/"
   },
   "dependencies": {
+    "774-link-data": "./data",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -51,18 +52,11 @@
   },
   "scripts": {
     "build": "next build",
-    "deploy": "firebase deploy --only hosting",
     "dev": "next dev",
-    "export": "next export",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint -f codeframe --ext .js,.ts,.tsx --ignore-path .gitignore .",
     "lint:prettier": "prettier -c --ignore-path .gitignore .",
-    "release": "npm run build && npm run export && npm run deploy",
     "start": "next start",
-    "test": "npm run lint"
-  },
-  "workspaces": [
-    "data",
-    "functions"
-  ]
+    "test": "npm run lint && jest"
+  }
 }
