--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-plugin-superjson-next": "^0.2.1",
     "eslint": "^7.18.0",
     "firebase-tools": "^9.2.2",
+    "fork-ts-checker-webpack-plugin": "^6.1.0",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
