--- a/functions/package.json
+++ b/functions/package.json
@@ -9,6 +9,8 @@
     "date-fns-tz": "^1.1.1",
     "firebase-admin": "^9.4.2",
     "firebase-functions": "^3.13.1",
+    "googleapis": "^67.0.0",
+    "meow": "^9.0.0",
     "twitter-api-client": "^1.2.9"
   },
   "devDependencies": {
