--- a/firebase.json
+++ b/firebase.json
@@ -9,5 +9,8 @@
       "npm --prefix \"$RESOURCE_DIR\" run build"
     ],
     "source": "functions"
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
