--- a/functions/package.json
+++ b/functions/package.json
@@ -11,11 +11,13 @@
     "firebase-functions": "^3.13.1",
     "googleapis": "^67.0.0",
     "meow": "^9.0.0",
+    "node-fetch": "^2.6.1",
     "twitter-api-client": "^1.2.9"
   },
   "devDependencies": {
     "@fiahfy/eslint-config": "^0.0.11",
     "@types/jest": "^26.0.20",
+    "@types/node-fetch": "^2.5.8",
     "dotenv": "^8.2.0",
     "eslint": "^7.18.0",
     "jest": "^26.6.3",
