--- a/functions/package.json
+++ b/functions/package.json
@@ -4,30 +4,30 @@
   "version": "0.0.1",
   "dependencies": {
     "774-link-data": "file:774-link-data-0.0.3.tgz",
-    "chalk": "^4.1.0",
-    "date-fns": "^2.16.1",
-    "date-fns-tz": "^1.1.1",
-    "firebase-admin": "^9.4.2",
-    "firebase-functions": "^3.13.1",
-    "googleapis": "^67.0.0",
-    "meow": "^9.0.0",
-    "node-fetch": "^2.6.1",
-    "twitter-api-client": "^1.2.9"
+    "chalk": "~4.1.2",
+    "date-fns": "^2.26.0",
+    "date-fns-tz": "^1.1.6",
+    "firebase-admin": "^10.0.0",
+    "firebase-functions": "^3.16.0",
+    "googleapis": "^91.0.0",
+    "meow": "~9.0.0",
+    "node-fetch": "~2.6.6",
+    "twitter-api-client": "^1.4.0"
   },
   "devDependencies": {
-    "@fiahfy/eslint-config": "^0.0.11",
-    "@types/jest": "^26.0.20",
-    "@types/node-fetch": "^2.5.8",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.18.0",
-    "jest": "^26.6.3",
+    "@fiahfy/eslint-config": "^0.0.15",
+    "@types/jest": "^27.0.3",
+    "@types/node-fetch": "~2.5.12",
+    "dotenv": "^10.0.0",
+    "eslint": "^8.3.0",
+    "jest": "^27.3.1",
     "jest-date-mock": "^1.0.8",
-    "prettier": "^2.2.1",
-    "ts-jest": "^26.5.0",
-    "typescript": "^4.1.3"
+    "prettier": "^2.5.0",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.5.2"
   },
   "engines": {
-    "node": "12"
+    "node": "16"
   },
   "main": "dist/index.js",
   "private": true,
@@ -36,7 +36,7 @@
     "deploy": "firebase deploy --only functions",
     "dev": "tsc -w",
     "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lint:eslint": "eslint -f codeframe --ext .js,.ts --ignore-path .gitignore .",
+    "lint:eslint": "eslint --ext .js,.ts --ignore-path .gitignore .",
     "lint:prettier": "prettier -c --ignore-path .gitignore .",
     "logs": "firebase functions:log",
     "package": "if [ -d ../data ]; then npm pack ../data; fi",
