--- a/package.json
+++ b/package.json
@@ -9,35 +9,35 @@
   },
   "dependencies": {
     "774-link-data": "./data",
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@material-ui/styles": "^4.11.3",
-    "color": "^3.1.3",
-    "date-fns": "^2.16.1",
-    "firebase": "^8.2.5",
-    "firebase-admin": "^9.4.2",
-    "next": "^10.0.6",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "color": "^4.0.2",
+    "date-fns": "^2.26.0",
+    "firebase": "^9.5.0",
+    "firebase-admin": "^10.0.0",
+    "next": "^12.0.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@fiahfy/eslint-config-next": "^0.0.11",
-    "@types/color": "^3.0.1",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "@types/resize-observer-browser": "^0.1.5",
-    "babel-plugin-superjson-next": "^0.2.1",
-    "eslint": "^7.18.0",
-    "firebase-tools": "^9.2.2",
-    "fork-ts-checker-webpack-plugin": "^6.1.0",
-    "husky": "^4.3.8",
-    "jest": "^26.6.3",
-    "prettier": "^2.2.1",
-    "superjson": "^1.5.2",
-    "ts-jest": "^26.5.0",
-    "typescript": "^4.1.3"
+    "@fiahfy/eslint-config-next": "^0.0.15",
+    "@types/color": "^3.0.2",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.10",
+    "@types/react": "^17.0.37",
+    "@types/resize-observer-browser": "^0.1.6",
+    "babel-plugin-superjson-next": "^0.4.2",
+    "eslint": "^8.3.0",
+    "firebase-tools": "^9.23.0",
+    "fork-ts-checker-webpack-plugin": "^6.4.2",
+    "husky": "^7.0.4",
+    "jest": "^27.3.1",
+    "prettier": "^2.5.0",
+    "superjson": "^1.8.0",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.5.2"
   },
   "keywords": [
     "firebase",
@@ -55,8 +55,9 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lint:eslint": "eslint -f codeframe --ext .js,.ts,.tsx --ignore-path .gitignore .",
+    "lint:eslint": "eslint --ext .js,.ts,.tsx --ignore-path .gitignore .",
     "lint:prettier": "prettier -c --ignore-path .gitignore .",
+    "prepare": "husky install",
     "start": "next start",
     "test": "npm run lint && jest"
   }
