--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "skipLibCheck": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "incremental": true
   },
   "include": ["src"],
   "exclude": ["node_modules"]
