--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "774-link",
   "description": "WIP",
   "version": "0.0.1",
-  "author": {
-    "name": "fiahfy",
-    "email": "d.fiahfy@gmail.com",
-    "url": "http://fiahfy.blogspot.com/"
-  },
   "dependencies": {
     "774-link-data": "./data",
     "@material-ui/core": "^4.12.3",
@@ -23,6 +18,7 @@
   },
   "devDependencies": {
     "@fiahfy/eslint-config-next": "^0.0.15",
+    "@fiahfy/prettier-config": "^0.0.3",
     "@types/color": "^3.0.2",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
@@ -39,26 +35,15 @@
     "ts-jest": "^27.0.7",
     "typescript": "^4.5.2"
   },
-  "keywords": [
-    "firebase",
-    "material-ui",
-    "next",
-    "react"
-  ],
   "main": "",
   "private": true,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/fiahfy/774-link"
-  },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lint:eslint": "eslint --ext .js,.ts,.tsx --ignore-path .gitignore .",
-    "lint:prettier": "prettier -c --ignore-path .gitignore .",
+    "format": "prettier -c --ignore-path .gitignore .",
+    "lint": "eslint --ext .js,.ts,.tsx --ignore-path .gitignore .",
     "prepare": "husky install",
     "start": "next start",
-    "test": "npm run lint && jest"
+    "test": "npm run format && npm run lint && jest"
   }
 }
