--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   },
   "main": "",
   "private": true,
+  "resolutions": {
+    "@types/react": "^17.0.37"
+  },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
